--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Home" />
     
-    <title>Samuel Park | Portfolio</title>
+    <title>Samuel Park | Personal Website</title>
     <meta
       name="description"
       content="Hi, I'm Sam. Welcome to my personal website!"
